<resources>
    <string name="app_name">Kalkulator BMI</string>
    <string name="height_input">Wzrost (w cm)</string>
    <string name="weight_input">Waga (w kg)</string>
    <string name="sum_button">Oblicz</string>
    <string name="result_title">Wyniki:</string>
    <string name="result_none">Brak wyników</string>
    <string name="result_value">Wzrost: %.2f m\nWaga: %d kg\nBMI: %.1f\nWynik: %s</string>
    <string name="error_empty_values">Błąd podczas wprowadzania danych!</string>
</resources>